@@ -1,6 +1,11 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  16 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
+  targets/support/livecdfs-update.sh, targets/support/unmerge.sh:
+  move moving of /var/db back to livecdfs-update.sh but keep the symlink so we
+  can unmerge
+
   13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/support/livecdfs-update.sh, targets/support/unmerge.sh:
   Removing old mkvardb code which is no longer used, commenting out setting of
